syntax = "proto3";

package order;

service OrderService {
  rpc GetOrdersByUser (GetOrdersByUserRequest) returns (GetOrdersByUserResponse);
}

message GetOrdersByUserRequest {
  string userId = 1;
}

message Order {
  string orderId = 1;
  string userId = 2;
  string product = 3;
  int32 quantity = 4;
  double price = 5;
}

message GetOrdersByUserResponse {
  repeated Order orders = 1;
}
